--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cloud_firestore: ^5.6.8
   url_launcher: ^6.3.1
   firebase_auth: ^5.5.4
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
