--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   google_mlkit_text_recognition: ^0.15.0
   image_picker: ^0.8.7
   shared_preferences: ^2.5.3
+  flutter_local_notifications: ^17.0.0
+  flutter_timezone: ^4.1.1
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
