--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_local_notifications: ^17.0.0
   flutter_timezone: ^4.1.1
   timezone: ^0.9.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
