--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,4 +23,8 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  assets:
+    - assets/images/logo.png
   uses-material-design: true
+
+   
