--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   permission_handler: ^11.3.1
 
 dev_dependencies:
+  flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
@@ -29,6 +30,11 @@ dev_dependencies:
 flutter:
   assets:
     - assets/images/logo.png
+    - assets/images/applogo.png
   uses-material-design: true
 
-   
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/applogo.png"
+  remove_alpha_ios: true
